--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [],
+            "scripts": [
+
+            ],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
