jsPDF autotable Journal and BalanceSheet

--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.3",
     "mk-magic-alerts": "^18.0.2",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
